# CS112_20230010_20230322_20230364

./: README.md
CS112_GUI/: Functions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Final Project/: BabyPhotoshop.pro  Functions.h  Image_Class.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt
Project/Project/: CMakeLists.txt  Image_Class.h  main.cpp  mainwindow.cpp  mainwindow.h
assignment_2/task_2/My_Cipher/: CMakeLists.txt  cipher_0.cpp
assignment_2/task_3/: CS112_A2_T3_S3_20230010_S4_20230322_S4_20230364.cpp
assignment_2/task_4/: CS112_A2_T4_S3_20230010_S4_20230322_S4_20230364.cpp
assignment_3/Baby_Photoshop/Part_1/: CMakeLists.txt  CS112_A3_Part1_S3_20230010_S4_20230322_S4_20230364.cpp
assignment_3/Baby_Photoshop/full code/: CMakeLists.txt  main.cpp
testgui/: CMakeLists.txt
testgui/BabyPhotoshop/: gui.cpp  gui.h  main.cpp
